<resources>
    <!-- ОБЩИЕ -->
    <string name="app_name">Колледж</string>

    <!-- АВТОРИЗАЦИЯ -->
    <string name="Autoriz">Авторизация</string>
    <string name="email">e-mail</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="btn_login">Вход</string>

    <string name="student">Студент</string>
    <string name="teacher">Преподаватель</string>
    <string name="admin">Приемная комиссия</string>

    <!-- ГЛАВНАЯ СТРАНИЦА -->
    <string name="main_title">Колледж</string>
    <string name="btn_logout">Выйти</string>
    <string name="search_title">Поиск студентов</string>
    <string name="search_hint">ФИО или группа</string>
    <string name="btn_search">Найти</string>
    <string name="quick_actions">Быстрые действия</string>
    <string name="action_students">Студенты</string>
    <string name="action_teachers">Преподаватели</string>
    <string name="action_groups">Группы</string>
    <string name="action_specializations">Специальности</string>
    <string name="statistics">Статистика</string>
    <string name="students_count">студентов</string>
    <string name="teachers_count">преподавателей</string>

    <string name="groupName">Номер группы</string>
    <string name="course">Курс</string>
    <string name="numberSpecial">Номер специальности</string>
    <string name="fullName">ФИО</string>
    <string name="Buget">Бюджет</string>
    <string name="Nebuget">Платник</string>
    <string name="add_text">Добавить</string>

    <string name="specialition_text">Специальность</string>
    <string name="count_hour_text">Кол-во часов</string>

    <string name="groups_name">Название группы</string>
    <string name="spec_name">Название специальности</string>
    <string name="spce_code">Код специальности</string>

    <string name="delete">Удалить</string>
    <string name="redact">Изминить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>