<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="48dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary"
                tools:ignore="SpeakableTextPresentCheck" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbCommission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:buttonTint="@color/text_primary"
                    android:text="@string/admin"
                    android:textColor="@color/text_primary"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rbTeacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:buttonTint="@color/text_primary"
                    android:text="@string/teacher"
                    android:textColor="@color/text_primary"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rbStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_primary"
                    android:text="@string/student"
                    android:textColor="@color/text_primary"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@color/black_light"
        android:textColor="@color/white"
        android:background="@drawable/button_background"/>

</LinearLayout>