<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddStudentFragment"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specialition_text"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                />

            <Spinner
                android:id="@+id/specialition"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_hour_text"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                />

            <EditText
                android:id="@+id/count_hour"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/add_text"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/black_light"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>